#pragma once
#include "MedusaCorePreCompiled.h"

#include "Core/Algorithm/Algorithm.h"
#include "Core/Algorithm/Pack/GuillotineBinPack.h"
#include "Core/Algorithm/Pack/SkylineBinPack.h"
#include "Core/Assertion/CommonAssert.h"
#include "Core/Coder/CoderFactory.h"
#include "Core/Coder/CoderPool.h"
#include "Core/Coder/ICoder.h"
#include "Core/Coder/LZMA/LZMADecoder.h"
#include "Core/Coder/LZMA/LZMAEncoder.h"
#include "Core/Coder/XOR/XORDecoder.h"
#include "Core/Coder/XOR/XOREncoder.h"
#include "Core/Coder/XXTEA/XXTEAEncryptor.h"
#include "Core/Collection/Array.h"
#include "Core/Collection/BitArray.h"
#include "Core/Collection/Dictionary.h"
#include "Core/Collection/Enumerator.h"
#include "Core/Collection/HashHelper.h"
#include "Core/Collection/HashSet.h"
#include "Core/Collection/ICollection.h"
#include "Core/Collection/IDictionary.h"
#include "Core/Collection/IEnumerable.h"
#include "Core/Collection/IEnumerator.h"
#include "Core/Collection/ILinkedList.h"
#include "Core/Collection/IList.h"
#include "Core/Collection/ISet.h"
#include "Core/Collection/ISortedList.h"
#include "Core/Collection/KeyValuePair.h"
#include "Core/Collection/LinkedList.h"
#include "Core/Collection/Linq.h"
#include "Core/Collection/List.h"
#include "Core/Collection/Queue.h"
#include "Core/Collection/SortedDictionary.h"
#include "Core/Collection/SortedList.h"
#include "Core/Collection/Stack.h"
#include "Core/Collection/STLPort.h"
#include "Core/Compile/Type.h"
#include "Core/Compile/TypeInfo.h"
#include "Core/Compile/TypeList.h"
#include "Core/Compile/TypeListPrivate.h"
#include "Core/Compile/TypeTraits.h"
#include "Core/Compress/ZipReader.h"
#include "Core/Config/ServerConfig.h"
#include "Core/Config/ServerList.h"
#include "Core/Dynamic/Dynamic.h"
#include "Core/Event/EventArg/IEventArg.h"
#include "Core/Event/EventArg/UserDataEventArg.h"
#include "Core/Event/ThreadEventDispatcher.h"
#include "Core/Event/Trigger/ITrigger.h"
#include "Core/Event/UIEventDispatcher.h"
#include "Core/Event/WorkItem.h"
#include "Core/Geometry/AABBBox.h"
#include "Core/Geometry/Color3.h"
#include "Core/Geometry/Color4.h"
#include "Core/Geometry/Cube.h"
#include "Core/Geometry/EulerAngle.h"
#include "Core/Geometry/GeometryDefines.h"
#include "Core/Geometry/GeometryFactory.h"
#include "Core/Geometry/Line2.h"
#include "Core/Geometry/Line3.h"
#include "Core/Geometry/Matrix2.h"
#include "Core/Geometry/Matrix3.h"
#include "Core/Geometry/Matrix4.h"
#include "Core/Geometry/Matrix43.h"
#include "Core/Geometry/Moveable/DefaultMoveable.h"
#include "Core/Geometry/Moveable/TransformMoveable.h"
#include "Core/Geometry/Padding4.h"
#include "Core/Geometry/Point2.h"
#include "Core/Geometry/Point3.h"
#include "Core/Geometry/Point4.h"
#include "Core/Geometry/Quad.h"
#include "Core/Geometry/Quaternion.h"
#include "Core/Geometry/Range.h"
#include "Core/Geometry/Rect2.h"
#include "Core/Geometry/Rotation2.h"
#include "Core/Geometry/Rotation3.h"
#include "Core/Geometry/Scale2.h"
#include "Core/Geometry/Scale3.h"
#include "Core/Geometry/ShapeVertex.h"
#include "Core/Geometry/Size2.h"
#include "Core/Geometry/Size3.h"
#include "Core/Geometry/TextureVertex.h"
#include "Core/Geometry/Thickness.h"
#include "Core/Geometry/Transform/TransformFactory.h"
#include "Core/Geometry/Triangle.h"
#include "Core/IO/Directory.h"
#include "Core/IO/File.h"
#include "Core/IO/FileDefines.h"
#include "Core/IO/FileId.h"
#include "Core/IO/FileIdStorage.h"
#include "Core/IO/FileInfo.h"
#include "Core/IO/FileList/FileCoderList.h"
#include "Core/IO/FileList/FileList.h"
#include "Core/IO/FileList/FileListFileItem.h"
#include "Core/IO/FileSystem/Accessor/android/AndroidFileSystemAccessor.h"
#include "Core/IO/FileSystem/Accessor/IFileSystemAccessor.h"
#include "Core/IO/FileSystem/Accessor/posix/PosixFileSystemAccessor.h"
#include "Core/IO/FileSystem/FileSystem.h"
#include "Core/IO/FileSystem/FileSystemNameItem.h"
#include "Core/IO/FileSystem/FileSystemOrderItem.h"
#include "Core/IO/FileSystem/FileSystemTagItem.h"
#include "Core/IO/MemoryFileAutoRegister.h"
#include "Core/IO/Pack/Package.h"
#include "Core/IO/Pack/PackageFile.h"
#include "Core/IO/Pack/PackageHeader.h"
#include "Core/IO/Path.h"
#include "Core/IO/Stream/FileStream.h"
#include "Core/IO/Stream/IStream.h"
#include "Core/IO/Stream/MemoryStream.h"
#include "Core/IO/Stream/ProxyStream.h"
#include "Core/IO/Updater/FileDownloadingProgressEventArg.h"
#include "Core/IO/Updater/FileUpdater.h"
#include "Core/IO/Updater/ServerStatusEventArg.h"
#include "Core/IO/Updater/UpdaterDefines.h"
#include "Core/Log/android/AndroidTraceLogger.h"
#include "Core/Log/CallbackLogger.h"
#include "Core/Log/FileLogger.h"
#include "Core/Log/ILogger.h"
#include "Core/Log/ios/IOSConsoleLogger.h"
#include "Core/Log/linux/LinuxConsoleLogger.h"
#include "Core/Log/Log.h"
#include "Core/Log/win/WindowsConsoleLogger.h"
#include "Core/Log/win/WindowsTraceLogger.h"
#include "Core/Math/MathHeader.h"
#include "Core/Math/MathStrategy.h"
#include "Core/Math/Model/IScrollMathModel.h"
#include "Core/Math/Model/SpringScrollMathModel.h"
#include "Core/Math/Random.h"
#include "Core/Memory/Memory.h"
#include "Core/Memory/MemoryData.h"
#include "Core/Message/BaseCustomMessage.h"
#include "Core/Message/BaseMessage.h"
#include "Core/Message/BaseRequestMessage.h"
#include "Core/Message/Handler/IMessageHandler.h"
#include "Core/Message/Handler/MessageHandlerFactory.h"
#include "Core/Message/Handler/MockMessageHandler.h"
#include "Core/Message/Handler/TcpMessageHandler.h"
#include "Core/Message/IMessage.h"
#include "Core/Message/MessageDispatcher.h"
#include "Core/Message/MessageEventArg.h"
#include "Core/Message/MessageFactory.h"
#include "Core/Net/HTTP/GlobalDownloadingProgressEventArg.h"
#include "Core/Net/HTTP/HTTPClient.h"
#include "Core/Net/HTTP/HTTPFileDownloader.h"
#include "Core/Net/HTTP/HTTPMemoryDownloader.h"
#include "Core/Net/HTTP/IHTTPDownloader.h"
#include "Core/Net/HTTP/SingleDownloadingProgressEventArg.h"
#include "Core/Net/Socket/AddressInfo.h"
#include "Core/Net/Socket/ClientSocket.h"
#include "Core/Net/Socket/HostInfo.h"
#include "Core/Net/Socket/ISocket.h"
#include "Core/Net/Socket/ProtocolInfo.h"
#include "Core/Net/Socket/ServerSocket.h"
#include "Core/Net/Socket/ServiceInfo.h"
#include "Core/Net/Socket/SocketDefines.h"
#include "Core/Pattern/Action/ArgDelegateAction.h"
#include "Core/Pattern/Action/BaseActionRunner.h"
#include "Core/Pattern/Action/BaseAnimationAction.h"
#include "Core/Pattern/Action/BaseFiniteAction.h"
#include "Core/Pattern/Action/BaseInfiniteAction.h"
#include "Core/Pattern/Action/BaseInstantAction.h"
#include "Core/Pattern/Action/Composite/BaseMultipleCompositeAction.h"
#include "Core/Pattern/Action/Composite/BaseSingleCompositeAction.h"
#include "Core/Pattern/Action/Composite/RepeatedAction.h"
#include "Core/Pattern/Action/Composite/RepeatedForeverAction.h"
#include "Core/Pattern/Action/Composite/ReverseAction.h"
#include "Core/Pattern/Action/Composite/SequenceAction.h"
#include "Core/Pattern/Action/Composite/SpawnAction.h"
#include "Core/Pattern/Action/Composite/SpeedAction.h"
#include "Core/Pattern/Action/Composite/Tween/BackEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/BackEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/BackEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/BaseTweenAction.h"
#include "Core/Pattern/Action/Composite/Tween/BezierAction.h"
#include "Core/Pattern/Action/Composite/Tween/BounceEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/BounceEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/BounceEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/CircularEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/CircularEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/CircularEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/CubicEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/CubicEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/CubicEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/ElasticEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/ElasticEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/ElasticEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/ExponentialEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/ExponentialEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/ExponentialEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuadraticEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuadraticEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuadraticEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuarticEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuarticEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuarticEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuinticEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuinticEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/QuinticEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/RateEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/RateEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/RateEaseOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/SinusoidalEaseInAction.h"
#include "Core/Pattern/Action/Composite/Tween/SinusoidalEaseInOutAction.h"
#include "Core/Pattern/Action/Composite/Tween/SinusoidalEaseOutAction.h"
#include "Core/Pattern/Action/DelayAction.h"
#include "Core/Pattern/Action/DelegateAction.h"
#include "Core/Pattern/Action/IAction.h"
#include "Core/Pattern/Action/IActionRunnable.h"
#include "Core/Pattern/ArrayObjectFactory.h"
#include "Core/Pattern/Component/ComponentCache.h"
#include "Core/Pattern/Component/ComponentFactory.h"
#include "Core/Pattern/Component/ComponentList.h"
#include "Core/Pattern/Component/IComponent.h"
#include "Core/Pattern/DefaultRunnable.h"
#include "Core/Pattern/Delegate.h"
#include "Core/Pattern/Dependency/DependencyEffectiveValue.h"
#include "Core/Pattern/Dependency/DependencyObject.h"
#include "Core/Pattern/Dependency/DependencyProperty.h"
#include "Core/Pattern/Dependency/DependencyPropertyMetaData.h"
#include "Core/Pattern/DeprecationManager.h"
#include "Core/Pattern/EnumPattern.h"
#include "Core/Pattern/Event.h"
#include "Core/Pattern/FlagsPattern.h"
#include "Core/Pattern/IClone.h"
#include "Core/Pattern/ICopyFrom.h"
#include "Core/Pattern/IdObjectPool.h"
#include "Core/Pattern/IExecutable.h"
#include "Core/Pattern/IInitializable.h"
#include "Core/Pattern/ILoadable.h"
#include "Core/Pattern/IRunnable.h"
#include "Core/Pattern/ISerializable.h"
#include "Core/Pattern/ISharable.h"
#include "Core/Pattern/ISharableWithName.h"
#include "Core/Pattern/IUpdatable.h"
#include "Core/Pattern/LazyValue.h"
#include "Core/Pattern/MapObjectFactory.h"
#include "Core/Pattern/NullableValue.h"
#include "Core/Pattern/ObjectCache.h"
#include "Core/Pattern/ObjectPool.h"
#include "Core/Pattern/OverrideValue.h"
#include "Core/Pattern/Property/INotifyPropertyChanged.h"
#include "Core/Pattern/Property/IProperty.h"
#include "Core/Pattern/Property/IPropertyPtr.h"
#include "Core/Pattern/Property/PropertyChangedEventArg.h"
#include "Core/Pattern/Ptr/LazyStrongPtr.h"
#include "Core/Pattern/Ptr/NotNullPtr.h"
#include "Core/Pattern/RTTI/RTTIClass.h"
#include "Core/Pattern/RTTI/RTTIObject.h"
#include "Core/Pattern/Singleton.h"
#include "Core/Pattern/StaticConstructor.h"
#include "Core/Pattern/SwapValue.h"
#include "Core/Pattern/TuplePattern.h"
#include "Core/Pattern/VaryValue.h"
#include "Core/Profile/AutoStopWatch.h"
#include "Core/Profile/ProfileManager.h"
#include "Core/Profile/ProfileNode.h"
#include "Core/Profile/ProfileSample.h"
#include "Core/Profile/StopWatch.h"
#include "Core/Proto/Proto.h"
#include "Core/Script/ScriptManager.h"
#include "Core/Script/ScriptModule.h"
#include "Core/Script/ScriptObject.h"
#include "Core/Security/SecurityInt.h"
#include "Core/Security/SecurityValue.h"
#include "Core/String/BaseString.h"
#include "Core/String/FuckyString/FuckyString.h"
#include "Core/String/FuckyString/FuckyStringNode.h"
#include "Core/String/HeapString.h"
#include "Core/String/RandomName/RandomName.h"
#include "Core/String/StackString.h"
#include "Core/String/StdString.h"
#include "Core/String/StringParser.h"
#include "Core/String/StringRef.h"
#include "Core/String/StringTable/StringNameItem.h"
#include "Core/String/StringTable/StringOrderItem.h"
#include "Core/String/StringTable/StringTable.h"
#include "Core/String/TStringRef.h"
#include "Core/System/Environment.h"
#include "Core/System/EnvironmentTag.h"
#include "Core/System/ios/UIDevice+Reachability.h"
#include "Core/System/ios/wwanconnect.h"
#include "Core/System/System.h"
#include "Core/Threading/Lock.h"
#include "Core/Threading/Mutex.h"
#include "Core/Threading/ReadWriteLock.h"
#include "Core/Threading/Semaphore2.h"
#include "Core/Threading/Thread.h"
#include "Core/Threading/ThreadEvent.h"
#include "Core/Threading/ThreadingLockPolicy.h"
#include "Core/Utility/DateTime.h"
#include "Core/Utility/Guid.h"
#include "Core/Utility/HashUtility.h"
#include "Core/Utility/MD5.h"
#include "Core/Utility/TimeSpan.h"
#include "Core/Utility/Utility.h"
#include "Core/Utility/Version.h"

